2001-02-19  Christophe Merlet  <redfox@eikonex.org>

	* gui/gdmconfig.desktop: Added French strings.

Mon Feb 19 03:42:01 2001  Jonathan Blandford  <jrb@redhat.com>

	* gui/gdmlogin.c (create_handle): Minor UI cleanup to gdmlogin.

Sun Feb 18 15:05:00 2001  Lee Mallabone <lee0@callnetuk.com>

	* gui/gdmconfig.glade: Improve clarity, and make 'automatic login'
	more noticeable.

Sun Feb 18 11:32:00 2001  Lee Mallabone <lee0@callnetuk.com>

	* gui/gdmconfig.(c|glade): GUI fixes for Xserver clist.

Sat Feb 17 19:08:00 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.(c|glade): Patch from Lee to fix xdmcp options
	  sensitivity, plus make the clist title passive and set it to
	  browse selection mode.

Thu Feb 15 03:18:15 2001  George Lebl <jirka@5z.com>

	* Release 2.0.98.1

Thu Feb 15 03:18:12 2001  George Lebl <jirka@5z.com>

	* configure.in, config/Gnome.in, config/Failsafe.in,
	  config/gdm.conf.in, config/gnomerc.in:  Fix the autogeneration,
	  by including all the prefixes and by expanding the variables.
	  Idea stolen from GConf configure.in

Wed Feb 14 18:53:57 2001  George Lebl <jirka@5z.com>

	* configure.in, config/Makefile.am: Apply patch from peter@ximian.com
	  (Peter Teichman), to generate config files from .in files during
	  configure time, rather then install time

	* gdm.spec.in: update for the above

Tue Feb 13 18:27:03 2001  George Lebl <jirka@5z.com>

	* daemon/display.c: Apply fix from "Matthias Clasen"
	  <Matthias.Clasen@poet.de> to make xmdcp work for him.  Also
	  massaged that function a bit further.  But it doesn't solve
	  my problems.

Mon Feb 12 02:18:39 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: remove a duplicate bindtextdomain foo, and remove
	  the default dialog pos is center thing since we explicitly set
	  this anyway.

Sun Feb 11 16:23:01 2001  George Lebl <jirka@5z.com>

	* Release 2.0.98

Sat Feb 10 18:05:39 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.(c|h|glade): new update version of the configurator