@@ -1,3 +1,13 @@
+Mon Feb 19 21:37:07 2001  George Lebl <jirka@5z.com>
+
+	Patch from Tim Jansen <tim@tjansen.de>
+
+	* docs/C/gdm.sgml:  fixed docs in terms of true/false vs. 1/0 and
+	  add new values
+
+	 * gui/gdmlogin.c, gui/gdmchooser.c:  change GdmDebug to gboolean
+	   and add some checks for config values
+
 2001-02-19  Christophe Merlet  <redfox@eikonex.org>
 
 	* gui/gdmconfig.desktop: Added French strings.
